welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:3: error: not found: value vuBiscuit
	if (vuBiscuit() == true) {
            ^Program:11: error: not found: value vuBiscuit
	vuBiscuit() == true }
        ^Program:8: error: type mismatch;
 found   : Unit
 required: Boolean
for(i<-1 to 6){
     ^