welcome.lessons.welcome.methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {
	if (vuBiscuit() == true) {
		return true
	} else {
		return false
	}
for(i<-1 to 6){
	avance();
	if (estSurBiscuit() == true) {
	vuBiscuit() == true }
	haveBaggle();	
}
}